# cMchecker

./: .gitignore  CMakeLists.txt  LICENSE.txt  cMchecker.cpp  cMchecker_body.h  cMchecker_exe_sample  compile.sh  gamma.h  ludcmp.h  nr3a.h  ran.h
data/: test_full_sibling.txt  test_full_uncle.txt  test_half_sibling.txt  test_half_uncle.txt
include/: DataSet.hpp  Genealogy.hpp  Genome.hpp  Haploid.hpp  MultivariateModel.hpp  Parse.hpp  Person.hpp  TrialsOutput.hpp  cMchecker_body.hpp  globals.hpp  includeLibs.hpp  lenFixedCharArray.hpp  myThrow.hpp  parse.hpp  setResolution.hpp
libs/: hash.h  incgammabeta.h  nr3a.h  sort.h
src/: cMchecker.cpp
test/: full_program_test.cpp  run_tests.cpp  test_avg_values.cpp  test_bad_values.cpp  test_ideal_values.cpp
test/input_files/: father_son_relationship.txt  sibling_relationship.txt  uncle_nephew_relationship.txt
test/input_files/avg/: father_son.txt  half_sibling.txt  sibling.txt
test/input_files/bad/: father_son.txt  half_sibling.txt  sibling.txt  uncle_nephew.txt
test/input_files/ideal/: father_son.txt  half_sibling.txt  sibling.txt  uncle_nephew.txt
